k8s/ssl/off.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels: 
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - port: 9200
      targetPort: 80
      protocol: TCP
      name: http
    - port: 80
      targetPort: 80
      name: http-80
      protocol: TCP
