k8s/ssl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels: 
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - port: 9200
      targetPort: 9200
      protocol: TCP
      name: https
    - port: 80
      targetPort: 80
      name: http
      protocol: TCP
