k8s/ssl/se.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-svc-mongocluster
spec:
  hosts:
  - mymongodb.somedomain # not used
  ports:
  - number: 27018
    name: mongodb
    protocol: HTTPS
